# ffmpeg_x264_AVFoundation_Project

./: .gitignore
AudioRecordWav/: settings.gradle
AudioRecordWav/app/: build.gradle
AudioRecordWav/app/src/main/: AndroidManifest.xml
AudioRecordWav/app/src/main/java/com/lecture/av/audiorecordwav/: MainActivity.java
AudioRecordWav/app/src/main/res/layout/: activity_main.xml
AudioRecordWav/app/src/main/res/values/: strings.xml  themes.xml
AudioRecordWav/app/src/main/res/values-night/: themes.xml
AudioRecordWav/gradle/wrapper/: gradle-wrapper.properties
CameraXAchiveH264/: settings.gradle
CameraXAchiveH264/app/: build.gradle
CameraXAchiveH264/app/src/main/: AndroidManifest.xml
CameraXAchiveH264/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  Callback.h  ImageUtils.cpp  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
CameraXAchiveH264/app/src/main/cpp/faac/armeabi-v7a/include/: faac.h
CameraXAchiveH264/app/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.h
CameraXAchiveH264/app/src/main/cpp/libyuv/: CMakeLists.txt
CameraXAchiveH264/app/src/main/cpp/libyuv/source/librtmp/: CMakeLists.txt  rtmp.c
CameraXAchiveH264/app/src/main/cpp/x264/armeabi-v7a/lib/pkgconfig/: x264.pc
CameraXAchiveH264/app/src/main/res/layout/: activity_main.xml
CameraXAchiveH264/app/src/main/res/menu/: menu_main.xml
CameraXAchiveH264/app/src/main/res/navigation/: nav_graph.xml
CameraXAchiveH264/app/src/main/res/values/: strings.xml  themes.xml
CameraXAchiveH264/app/src/main/res/values-night/: themes.xml
CameraXAchiveH264/gradle/wrapper/: gradle-wrapper.properties
HelloFFmpeg/: settings.gradle
HelloFFmpeg/app/: build.gradle
HelloFFmpeg/app/src/main/: AndroidManifest.xml
HelloFFmpeg/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
HelloFFmpeg/app/src/main/cpp/include/libavutil/: ffversion.h
HelloFFmpeg/app/src/main/res/values/: strings.xml  themes.xml
HelloFFmpeg/app/src/main/res/values-night/: themes.xml
HelloFFmpeg/gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
